# torrent-search-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SEARCH_ENGINE_PORT_COVERAGE.md  package-lock.json  package.json  server.js  start.bat  stop.bat
.github/workflows/: build.yml  release.yml  tauri-build.yml  tauri-release.yml
docs/: RELEASE_ARTIFACTS.md
electron/: main.js
public/: app.js  index.html  styles.css
scripts/: build-portable.js  gen-icon.mjs  prepare-sidecar.mjs  verify-tauri-resources.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: downloaders.js  http.js  normalize.js  torznabStore.js
src/providers/: 1337x.js  anilibria.js  animetosho.js  anirena.js  audiobookbay.js  bangumimoe.js  bitsearch.js  blueroms.js  bt4g.js  btdigg.js  demo.js  dmhy.js  eztv.js  filemood.js  index.js  internetarchive.js  knaben.js  limetorrents.js  linuxtracker.js  megapeer.js  mikan.js  mypornclub.js  nekobt.js  nyaa.js  oxtorrent.js  rutor.js  subsplease.js  sukebei.js  therarbg.js  tokyotoshokan.js  torrent9.js  torrentdatabase.js  torrentdownload.js  torrentdownloads.js  torrentkitty.js  torrentscsv.js  torznab.js  tpb.js  uindex.js  xxxclub.js  (+3 more)
