[package]
name = "bt-aggregate-search"
version = "0.0.1-beta"
description = "BT 聚合搜索 — Tauri experiment (Node sidecar)"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
